# so-bogus

./: CMakeLists.txt  INSTALL.md  LICENSE.md  README.md  RELEASE.md  TODO  TODO.md  updateLicense.rb
apps/: CMakeLists.txt  CMakeSources.txt  FCLibLoader.cpp  FCLibSolver.hpp  LoadFrictionProblem.cpp
bogus/: CMakeLists.txt  CMakeSources.txt
bogus/Core/: Block.fwd.hpp  Block.hpp  Block.impl.hpp  BlockSolvers.fwd.hpp  BlockSolvers.hpp  BlockSolvers.impl.hpp  SecondOrder.fwd.hpp  SecondOrder.hpp  SecondOrder.impl.hpp
bogus/Core/Block/: Access.hpp  BlockMatrix.hpp  BlockMatrix.impl.hpp  BlockMatrixBase.hpp  BlockObjectBase.hpp  BlockTranspose.hpp  CompoundSparseBlockIndex.hpp  CompressedSparseBlockIndex.hpp  Constants.hpp  Expressions.hpp  MappedSparseBlockMatrix.hpp  MklBindings.hpp  ScalarBindings.hpp  SparseAssign.impl.hpp  SparseBlockIndex.hpp  SparseBlockIndex.impl.hpp  SparseBlockIndexComputer.hpp  SparseBlockMatrix.hpp  SparseBlockMatrix.impl.hpp  SparseBlockMatrixBase.hpp  SparseBlockMatrixBase.impl.hpp  SparseMatrixMatrixProduct.impl.hpp  SparseMatrixVectorProduct.impl.hpp  SparseScaleAdd.impl.hpp  SparseTranspose.impl.hpp  Streams.hpp  Traits.hpp
bogus/Core/BlockSolvers/: BlockSolverBase.hpp  BlockSolverBase.impl.hpp  ConjugateGradient.hpp  ConjugateGradient.impl.hpp  GaussSeidel.hpp  GaussSeidel.impl.hpp  IterativeLinearSolvers.hpp  IterativeLinearSolvers.impl.hpp  Krylov.hpp  Preconditioners.hpp  Preconditioners.impl.hpp
bogus/Core/Eigen/: BlockBindings.hpp  EigenBlockContainers.hpp  EigenMatrixTraits.hpp  EigenProblemTraits.hpp  EigenSerialization.hpp  EigenSparseLinearSolvers.hpp  SparseConversions.hpp  SparseHeader.hpp
bogus/Core/SOC/: FischerBurmeister.hpp  FischerBurmeister.impl.hpp  LocalSOCSolver.hpp  LocalSOCSolver.impl.hpp  SOCLaw.hpp
bogus/Core/Utils/: CppTools.hpp  LinearSolverBase.hpp  NaiveSharedPtr.hpp  NonSmoothNewton.hpp  NonSmoothNewton.impl.hpp  NumTraits.hpp  Signal.hpp
bogus/Interfaces/: FrictionProblem.cpp  FrictionProblem.hpp  MecheInterface.cpp  MecheInterface.hpp
cmake/: FindEigen3.cmake  FindFCLib.cmake  FindMKL.cmake
doc/doxygen/: Block.h  (+5 more)
src/: Block.fwd.hpp  Block.hpp  CMakeLists.txt  CMakeSources.txt  GaussSeidel.hpp  SOCLaw.hpp  SecondOrder.hpp
src/Block/: BlockMatrix.hpp  BlockMatrix.impl.hpp  EigenBindings.hpp  Expressions.hpp  SparseBlockIndex.hpp  SparseBlockMatrix.hpp  SparseBlockMatrix.impl.hpp  SparseProduct.impl.hpp  SparseTranspose.impl.hpp
src/Core/: Block.fwd.hpp  Block.hpp  Block.impl.hpp  Block.io.hpp  BlockSolvers.fwd.hpp  BlockSolvers.hpp  BlockSolvers.impl.hpp  GaussSeidel.fwd.hpp  GaussSeidel.hpp  GaussSeidel.impl.hpp  SecondOrder.fwd.hpp  SecondOrder.hpp  SecondOrder.impl.hpp
src/Core/Block/: Access.hpp  BlockMatrix.hpp  BlockMatrix.impl.hpp  BlockMatrixBase.hpp  BlockObjectBase.hpp  BlockObjectBase.impl.hpp  BlockTranspose.hpp  BlockUtils.hpp  CompoundMatrix.hpp  CompoundMatrix.impl.hpp  CompoundSparseBlockIndex.hpp  CompressedSparseBlockIndex.hpp  Constants.hpp  DynamicExpressions.hpp  EigenBindings.hpp  Expressions.hpp  IterableBlockObject.hpp  MappedSparseBlockMatrix.hpp  MklBindings.hpp  Operators.hpp  ScalarBindings.hpp  Serialization.hpp  SparseAssign.impl.hpp  SparseBlockIndex.hpp  SparseBlockIndexComputer.hpp  SparseBlockMatrix.hpp  SparseBlockMatrix.impl.hpp  SparseBlockMatrixBase.hpp  SparseBlockMatrixBase.impl.hpp  SparseMatrixMatrixProduct.impl.hpp  SparseMatrixVectorProduct.impl.hpp  SparseProduct.impl.hpp  SparseScaleAdd.impl.hpp  SparseTranspose.impl.hpp  Streams.hpp  Traits.hpp  Zero.hpp
src/Core/BlockSolvers/: ADMM.hpp  ADMM.impl.hpp  BlockSolverBase.hpp  BlockSolverBase.impl.hpp  Coloring.hpp  Coloring.impl.hpp  ConstrainedSolverBase.hpp  ConstrainedSolverBase.impl.hpp  GaussSeidel.hpp  GaussSeidel.impl.hpp  GaussSeidelBase.hpp  GaussSeidelBase.impl.hpp  Krylov.hpp  Krylov.impl.hpp  KrylovMethods.hpp  KrylovMethods.impl.hpp  LCPLaw.hpp  LCPLaw.impl.hpp  Preconditioners.hpp  Preconditioners.impl.hpp  ProductGaussSeidel.hpp  ProductGaussSeidel.impl.hpp  ProjectedGradient.hpp  ProjectedGradient.impl.hpp  PyramidLaw.hpp  PyramidLaw.impl.hpp
src/Core/Eigen/: BlockBindings.hpp  EigenBlockContainers.hpp  EigenLinearSolvers.hpp  EigenMatrixTraits.hpp  EigenProblemTraits.hpp  EigenSparseLinearSolvers.hpp  SparseConversions.hpp
src/Core/GaussSeidel/: BlockGaussSeidel.hpp  BlockGaussSeidel.impl.hpp  LocalProblem.hpp
src/Core/SOC/: FischerBurmeister.hpp  FischerBurmeister.impl.hpp  LocalSOCSolver.hpp  LocalSOCSolver.impl.hpp  SOCLaw.hpp  SOCLaw.impl.hpp
src/Core/Utils/: CppTools.hpp  EigenLinearSolvers.hpp  EigenMatrixTraits.hpp  EigenSparseLinearSolvers.hpp  LinearSolver.hpp  LinearSolverBase.hpp  Lock.hpp  NaiveSharedPtr.hpp  NonSmoothNewton.hpp  NonSmoothNewton.impl.hpp  NumTraits.hpp  Polynomial.hpp  Polynomial.impl.hpp  Signal.hpp  Threads.hpp  Timer.hpp
src/Extra/: SecondOrder.fwd.hpp  SecondOrder.hpp  SecondOrder.impl.hpp
src/Extra/SOC/: FischerBurmeister.hpp  FischerBurmeister.impl.hpp  LocalSOCSolver.hpp  LocalSOCSolver.impl.hpp  SOCLaw.hpp  SOCLaw.impl.hpp
src/GaussSeidel/: BlockGaussSeidel.hpp  BlockGaussSeidel.impl.hpp  GaussSeidel.impl.hpp  LocalProblem.hpp
src/Interfaces/: Cadoux.hpp  FrictionProblem.cpp  FrictionProblem.hpp  FrictionProblem.impl.hpp  MecheInterface.cpp  MecheInterface.hpp
src/SOC/: FischerBurmeister.cpp  FischerBurmeister.hpp  FischerBurmeister.impl.hpp  LocalSOCSolver.cpp  LocalSOCSolver.hpp  LocalSOCSolver.impl.hpp  SOCLaw.cpp  SOCLaw.hpp  SOCLaw.impl.hpp
src/Utils/: EigenLinearSolvers.hpp  EigenMatrixTraits.hpp  EigenSparseLinearSolvers.hpp  LinearSolver.hpp  NonSmoothNewton.hpp  NonSmoothNewton.impl.hpp  NumTraits.hpp  Polynomial.cpp  Polynomial.impl.hpp
src/bogus/Core/Utils/: Timer.hpp
src/bogus/Interfaces/: MecheInterface.cpp
tests/: ADMM.cpp  BlockMV.cpp  CMakeLists.txt  CMakeSources.txt  ConjugateGradient.cpp  Flat.cpp  GaussSeidel.cpp  Krylov.cpp  Map.cpp  Mkl.cpp  Polynomial.cpp  ProductGaussSeidel.cpp  ProjectedGradient.cpp  ResidualInfo.hpp  Serialization.cpp  SmallFrictionPb.hpp  SparseBlock.cpp  gtest-msvc11.patch  main.cpp
(+2 files in other folders)
